Fixed overflow styling.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,4 @@
 html, body, app-root, .app-frame {
-    overflow: hidden;
     margin: 0;
     height: 100%;
     box-sizing: border-box; 
